--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^16.14.0",
     "react-alice-carousel": "^2.0.1",
     "react-app-polyfill": "^0.1.3",
+    "react-bootstrap": "^2.4.0",
     "react-collapsible": "^2.8.3",
     "react-countup": "^4.2.3",
     "react-dom": "^16.14.0",
