--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
 REACT_APP_URL="http://127.0.0.1"
 REACT_APP_IMAGE_URL="
 REACT_APP_GOOGLE_CLIENT_ID="Replace with google client id"
-#REACT_APP_DEFAULT_API_KEY=""
-#REACT_APP_DEFAULT_API_KEY=""
-REACT_APP_DEFAULT_API_KEY=""
+API_END_POINT="https://api.tvmaze.com"
 SKIP_PREFLIGHT_CHECK=true
