--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@u-wave/react-vimeo": "^0.9.4",
     "@wbe/react-video-player": "^1.5.2",
+    "antd": "^4.21.7",
     "aos": "^2.3.4",
     "axios": "^0.18.0",
     "babel-preset-react-app": "^6.1.0",
@@ -46,6 +47,7 @@
     "node-sass": "^4.10.0",
     "popper.js": "^1.16.1",
     "prop-types": "^15.6.2",
+    "rc-drawer": "^4.4.3",
     "react": "^16.14.0",
     "react-alice-carousel": "^2.0.1",
     "react-app-polyfill": "^0.1.3",
@@ -65,7 +67,6 @@
     "react-number-format": "^4.3.0",
     "react-player": "^2.7.0",
     "react-redux": "^5.1.1",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "^2.1.1",
