--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "popper.js": "^1.16.1",
     "prop-types": "^15.6.2",
     "rc-drawer": "^4.4.3",
+    "rc-slider": "^10.0.1",
     "react": "^16.14.0",
     "react-alice-carousel": "^2.0.1",
     "react-app-polyfill": "^0.1.3",
@@ -79,6 +80,7 @@
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
     "sass-lint": "^1.12.1",
+    "screenfull": "^6.0.2",
     "simple-line-icons": "^2.4.1",
     "validator": "^10.11.0",
     "yup": "^0.26.6"
